; ModuleID = '/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_trim_trailing_dir_sep.c'
source_filename = "/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_trim_trailing_dir_sep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @strbuf_trim_trailing_dir_sep(%struct.strbuf* %0) #0 {
  %2 = alloca %struct.strbuf*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %2, align 8
  br label %3

3:                                                ; preds = %23, %1
  %4 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %5 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = icmp sgt i32 %6, 0
  br i1 %7, label %8, label %21

8:                                                ; preds = %3
  %9 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %10 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %9, i32 0, i32 1
  %11 = load i8*, i8** %10, align 8
  %12 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %13 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = sub nsw i32 %14, 1
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8, i8* %11, i64 %16
  %18 = load i8, i8* %17, align 1
  %19 = call i64 @is_dir_sep(i8 zeroext %18)
  %20 = icmp ne i64 %19, 0
  br label %21

21:                                               ; preds = %8, %3
  %22 = phi i1 [ false, %3 ], [ %20, %8 ]
  br i1 %22, label %23, label %28

23:                                               ; preds = %21
  %24 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %25 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = add nsw i32 %26, -1
  store i32 %27, i32* %25, align 8
  br label %3

28:                                               ; preds = %21
  %29 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %30 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %29, i32 0, i32 1
  %31 = load i8*, i8** %30, align 8
  %32 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %33 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i8, i8* %31, i64 %35
  store i8 0, i8* %36, align 1
  ret void
}

declare dso_local i64 @is_dir_sep(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
